# awsailab

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
cfn/: ALB.yaml  App.yaml  VPC.yaml
docs/: AWSControlTower.md  AWSOrganizations.md  AWSTransitGateway.md  Route53ResolverRule.md  TransitGatewayInsectionVPCDesigin.md  VPCTemplateDesign.md  WebAppTemplateDesign.md  simple-dns-server-guide.md  transit-gateway-design.md
src/awsailab/: __init__.py  _version.py
