[project]
name = "awsailab"
dynamic = ["version"]
description = "AWS AI research and development laboratory"
authors = [
    {name = "AWS AI Lab", email = "noreply@example.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10,<3.13"
dependencies = [
    "awslabs-aws-diagram-mcp-server>=1.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/awsailab/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/awsailab"]

[tool.hatch.build.targets.sdist]
include = ["src/awsailab"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = ["E", "F", "W", "B", "I", "N", "UP", "S", "C4"]
ignore = ["E501", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=term-missing"
